--- a/LatexTFG/Tesis.tex
+++ b/LatexTFG/Tesis.tex
@@ -54,6 +54,7 @@
 \newcommand{\ficherosBasicosTeXiS}{%
 TeXiS/TeXiS_pream,TeXiS/TeXiS_cab,TeXiS/TeXiS_bib,TeXiS/TeXiS_cover%
 }
+
 \newcommand{\ficherosBasicosTexto}{%
 constantes,guionado,Cascaras/bibliografia,config%
 }
@@ -133,6 +134,7 @@ constantes,guionado,Cascaras/bibliografia,config%
 \restauraCabecera
 
 \include{Capitulos/01Capitulo1}
+\include{Capitulos/02Capitulo2}
 %\include{...}
 %\include{...}
 %\include{...}
@@ -141,7 +143,7 @@ constantes,guionado,Cascaras/bibliografia,config%
 
 % Apéndices
 \appendix
-\include{Apendices/01ApendiceA}
+%\include{Apendices/01ApendiceA}
 %\include{...}
 %\include{...}
 %\include{...}
