--- a/LatexTFG/Capitulos/01Capitulo1.tex
+++ b/LatexTFG/Capitulos/01Capitulo1.tex
@@ -31,7 +31,7 @@ Es imposible enumerar la cantidad de aplicaciones que el software podría tener, 
 
 Sin embargo, para los autores de la presente memoria siempre tuvo cierto atractivo el desarrollo de software para dispositivos empotrados que utilizasen software libre. Fue entonces cuando se nos dio la posibilidad de trabajar en el presente proyecto, utilizando este tipo de dispotivos y además íntimamente enfocado y relacionado con el cuidado de la salud. La mezcla de ambos componentes nos fascinó a primera vista.
 
-El desarrollo de software para dispositivos empotrados se encuentra en pleno crecimiento desde hace ya varios años, y cada vez son más populares las comunidades que dan soporte a los desarrolladores de los mismos, facilitando así el proceso de creación del software. Asimismo también se encuentra en uno de sus mejores momentos todo tipo de gadget capaz de medir o monitorizar ciertas señales, como pueden ser los actuales relojes inteligentes, o las pulseras de actividad tan frecuentemente vistas. Estos dispositivos son capaces de monitorizar multitud de señales procedentes del cuerpo humano, y todo esto en un reducido espacio físico fácilmente portable.
+El desarrollo de software para dispositivos empotrados se encuentra en pleno crecimiento desde hace ya varios años, y cada vez son más populares las comunidades que dan soporte a los desarrolladores de los mismos, facilitando así el proceso de creación del software. Asimismo también se encuentra en uno de sus mejores momentos todo tipo de \textit{gadget} capaz de medir o monitorizar ciertas señales, como pueden ser los actuales relojes inteligentes, o las pulseras de actividad tan frecuentemente vistas. Estos dispositivos son capaces de monitorizar multitud de señales procedentes del cuerpo humano, y todo esto en un reducido espacio físico fácilmente portable.
 
 La monitorización de ciertas señales biomédicas puede ser un factor fundamental a la hora de detectar problemas de salud de forma precoz. La presente memoria trata de ilustrar el proceso gracias al cual es posible monitorizar este tipo de señales utilizando un hardware de bajo coste y portable, y un software libre, adecuado y preciso, cuya unión pueda facilitar la práctica de este tipo de procesos en todos los contextos en los que pudiera ser necesario.
 
