--- a/LatexTFG/latex.bib
+++ b/LatexTFG/latex.bib
@@ -134,3 +134,13 @@
   webpage = {http://ctan.org/get/info/spanish/guia-atx/guia-atx.pdf},
   lastaccess = {Octubre, 2009},
 }
+
+@Book{exploringBBB,
+  author =	 {Derek Molloy},
+  title =	 {Exploring BeagleBone},
+  publisher = 	 {Versión electrónica},
+  year = 	 {Enero, 2014},
+  webpage = {http://exploringbeaglebone.com/},
+  lastaccess = {Mayo, 2017},
+}
+
