--- a/LatexTFG/Tesis.tex
+++ b/LatexTFG/Tesis.tex
@@ -9,7 +9,6 @@
 % que contienen cada sección.
 %
 %----------------------------------------------------------------------
-%
 % Los ficheros necesarios para este documento son:
 %
 %       TeXiS/* : ficheros de la plantilla TeXiS.
@@ -77,6 +76,8 @@ constantes,guionado,Cascaras/bibliografia,config%
 
 % Paquete de la plantilla
 \usepackage{TeXiS/TeXiS}
+
+\usepackage{hyperref}
 
 % Incluimos el fichero con comandos de constantes
 \include{constantes}
