--- a/LatexTFG/latex.bib
+++ b/LatexTFG/latex.bib
@@ -144,3 +144,21 @@
   lastaccess = {Mayo, 2017},
 }
 
+@Book{BBBsite,
+  author =	 {elinux.org},
+  title =	 {BeagleBone Black},
+  publisher = 	 {Versión electrónica},
+  year = 	 {2017},
+  webpage = {http://elinux.org/Beagleboard:BeagleBoneBlack},
+  lastaccess = {Mayo, 2017},
+}
+
+@Book{ads1198,
+  author =	 {Texas Instruments},
+  title =	 {ADS1198},
+  publisher = 	 {Versión electrónica},
+  year = 	 {2017},
+  webpage = {http://www.ti.com/product/ADS1198},
+  lastaccess = {Mayo, 2017},
+}
+
